# Rust-Projects

./: README.md
Rust-Bevy-Android/: README.md
Rust-Bevy-Android/asteroid-game/: Cargo.toml
Rust-Bevy-Android/asteroid-game/src/: debug.rs  main.rs  movement.rs  spaceship.rs
Rust-Cryptography-Studies/argon2-hash-enc/: Cargo.toml
Rust-Cryptography-Studies/argon2-hash-enc/src/: main.rs
Rust-Cryptography-Studies/pdkdf2-pwd-hash/: Cargo.toml
Rust-Cryptography-Studies/pdkdf2-pwd-hash/src/: main.rs
Rust-Dioxus-Learning/draws-notes/: Cargo.toml  README.md  input.css  tailwind.config.js
Rust-Dioxus-Learning/draws-notes/public/: tailwind.css
Rust-Dioxus-Learning/draws-notes/src/: main.rs
Rust-Dioxus-Learning/draws-notes/src/component/: counter.rs  loading.rs  mod.rs  notebook_bar.rs  notes_bar.rs  notes_view.rs
Rust-Dioxus-Learning/draws-notes/src/model/: mod.rs  note.rs  notebook.rs
Rust-Dioxus-Learning/hackernews-protoype/: Cargo.toml  Dioxus.toml  README.md
Rust-Dioxus-Learning/hackernews-protoype/src/: main.rs
Rust-Ethereum/: README.md
Rust-Ethereum/eth-transactions/: Cargo.toml
Rust-Ethereum/eth-transactions/src/: main.rs
Rust-FirstBreakoutGame-YT/firstbreakoutgame/: Cargo.toml
Rust-FirstBreakoutGame-YT/firstbreakoutgame/src/: main.rs
Rust-Leptos-Full-Stack/leptos-tutorial/: Cargo.toml  index.html
Rust-Leptos-Full-Stack/leptos-tutorial/src/: main.rs
Rust-RAGCli-ORCA/rag-cli-app/: Cargo.toml
Rust-RAGCli-ORCA/rag-cli-app/src/: main.rs
RustDataScience-Study/linfa-study/src/: main.rs
RustInAction_Projects/mandlebrot/: Cargo.toml
RustInAction_Projects/mandlebrot/src/: main.rs
Rust_AI/: README.md
Rust_AI/PCA-correlation/: Cargo.toml
Rust_AI/PCA-correlation/src/: main.rs
Rust_AI/bert-embedding-rust/: Cargo.toml
Rust_AI/bert-embedding-rust/src/: main.rs
Rust_AI/binary-heap/: Cargo.toml
Rust_AI/binary-heap/src/: main.rs
Rust_AI/candle-python-to-rust-comparison/: Cargo.toml
Rust_AI/candle-python-to-rust-comparison/src/: main.rs
Rust_AI/concurrency-threading/: Cargo.toml
Rust_AI/concurrency-threading/src/: main.rs
Rust_AI/data-importation/: Cargo.toml
Rust_AI/data-importation/data/: data-shortened.csv
Rust_AI/data-importation/src/: main.rs
Rust_AI/data-type-conversions-parsing/: Cargo.toml
Rust_AI/data-type-conversions-parsing/src/: main.rs
Rust_AI/data-viz-w-plotters/: Cargo.toml
Rust_AI/data-viz-w-plotters/src/: main.rs
Rust_AI/databases-data-lakes/: Cargo.toml
Rust_AI/databases-data-lakes/src/: main.rs
Rust_AI/desc-stats-rayon/: Cargo.toml
Rust_AI/desc-stats-rayon/src/: main.rs
Rust_AI/dimensionality-reduction/: Cargo.toml
Rust_AI/dimensionality-reduction/src/: main.rs
Rust_AI/error-handling/src/: main.rs
Rust_AI/generics-and-traits/: Cargo.toml
Rust_AI/generics-and-traits/src/: main.rs
Rust_AI/handling-missing-data/: Cargo.toml
Rust_AI/handling-missing-data/src/: main.rs
Rust_AI/outlier-detection-normalization/: Cargo.toml
Rust_AI/outlier-detection-normalization/src/: main.rs
Rust_AI/outlier-management/: Cargo.toml
Rust_AI/outlier-management/src/: main.rs
Rust_AI/rust-ml-pipeline/data-prep-processing/: Cargo.toml
Rust_AI/rust-ml-pipeline/data-prep-processing/src/: main.rs
Rust_AI/rust-ml-pipeline/simple-linear-regression-lingress/: Cargo.toml
Rust_AI/rust-ml-pipeline/simple-linear-regression-lingress/src/: main.rs
Rust_AI/rust-ml-pipeline/using-ndarray-rand/: Cargo.toml
Rust_AI/rust-ml-pipeline/using-ndarray-rand/src/: main.rs
Rust_AI/time-series-data/: Cargo.toml
Rust_AI/time-series-data/src/: main.rs
