[package]
name = "hackernews-protoype"
version = "0.1.0"
authors = ["squeeko <squeeko@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

reqwest = { version = "0.12.4", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.198"                                     # Debug
log = "0.4.19"
dioxus-logger = "0.5.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
async-recursion = "1.1.1"
