[package]
name = "rag-cli-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bert = "0.1.0"
clap = "4.4.18"
orca = { git = "https://github.com/scrippt-tech/orca", package = "orca-core" }
pdf = "0.9.0"
serde = { version = "1.0.195", features = ["derive"] }
# serde = { version = "1.0", features = ['derive'] }
# serde_derive = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
