[package]
name = "candle-python-to-rust-comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
hf-hub = "0.3.2"
serde = "1.0.197"
serde_json = "1.0.115"
tokenizers = "0.15.2"
