[package]
name = "dimensionality-reduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa-datasets = { version = "0.7.0", features = ["diabetes"] }
linfa = "0.7.0"
linfa-reduction = "0.7.0"
ndarray = "0.15.6"
